[ADD] Menambahkan Fitur Upload Foto

--- a/app/src/main/res/layout/activity_daftar_akun.xml
+++ b/app/src/main/res/layout/activity_daftar_akun.xml
@@ -49,10 +49,10 @@
 
                 <ImageView
                     android:id="@+id/IvProfile"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginStart="10dp"
-                    android:layout_marginTop="150dp"
+                    android:layout_width="161dp"
+                    android:layout_height="139dp"
+                    android:layout_marginStart="4dp"
+                    android:layout_marginTop="124dp"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toTopOf="parent"
                     app:srcCompat="@mipmap/ic_profile_foreground" />
@@ -90,7 +90,7 @@
                     android:id="@+id/txtHp"
                     android:layout_width="354dp"
                     android:layout_height="48dp"
-                    android:layout_marginTop="4dp"
+                    android:layout_marginTop="10dp"
                     android:background="@drawable/bundar"
                     android:ems="10"
                     android:hint="NOMOR WHATSAPP"
@@ -108,7 +108,7 @@
                     android:id="@+id/txtSekolah"
                     android:layout_width="354dp"
                     android:layout_height="48dp"
-                    android:layout_marginTop="12dp"
+                    android:layout_marginTop="10dp"
                     android:background="@drawable/bundar"
                     android:ems="10"
                     android:hint="ASAL SEKOLAH"
@@ -145,7 +145,7 @@
                     android:id="@+id/txtTtgll"
                     android:layout_width="354dp"
                     android:layout_height="48dp"
-                    android:layout_marginTop="12dp"
+                    android:layout_marginTop="10dp"
                     android:background="@drawable/bundar"
                     android:ems="10"
                     android:hint="TEMPAT TANGGAL LAHIR"
