--- a/app/src/main/res/navigation/mobile_navigation.xml
+++ b/app/src/main/res/navigation/mobile_navigation.xml
@@ -3,7 +3,13 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/mobile_navigation"
-    app:startDestination="@+id/nav_home">
+    app:startDestination="@+id/nav_pengumuman">
+
+    <fragment
+        android:id="@+id/nav_pengumuman"
+        android:name="com.hanlie.mobisuts_2111500077.fragment.PengumumanFragment"
+        android:label="Daftar Pengumuman"
+        tools:layout="@layout/fragment_pengumuman" />
 
     <fragment
         android:id="@+id/nav_home"
